Implement validation and resource estimation functions for climate models
- Added `dictionary_utils.py` for handling validation result trimming and parsing.
- Introduced `io_compare_utils.py` to compare validation results between input and output models.
- Created `resource_functions.py` for estimating resource requirements based on file sizes.
- Developed `validation_functions.py` to validate model structures, including checks for grid compatibility and file completeness.
- Enhanced validation logic to support strict grid checks and improved error handling.
- Updated logging functionality to capture validation results in a structured format.

--- a/.gitignore
+++ b/.gitignore
@@ -85,11 +85,11 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# Pyre data_type checker
 .pyre/
 
-# pytype static type analyzer
-.pytype/
+# pydata_type static data_type analyzer
+.pydata_type/
 
 # Cython debug symbols
 cython_debug/
@@ -121,15 +121,6 @@ results/tables/*
 !results/tables/.gitkeep
 results/documents/*
 !results/documents/.gitkeep
-
-# Quarto
-/.quarto/
-docs/quarto/_site/
-docs/quarto/.quarto/
-*.html
-*_files/
-*.docx
-manuscript-meca.zip
 
 # Sphinx
 docs/sphinx/_build/
