Process tc risk after downscaling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,13 @@ dependencies = [
     "notebook (>=7.4.7,<8.0.0)",
     "ipykernel (>=7.1.0,<8.0.0)",
     "xarray (>=2025.10.1,<2026.0.0)",
-    "netcdf4 (>=1.7.3,<2.0.0)"
+    "netcdf4 (>=1.7.3,<2.0.0)",
+    "global-land-mask (>=1.0.0,<2.0.0)",
+    "cfgrib (>=0.9.15.1,<0.10.0.0)",
+    "cftime (>=1.6.5,<2.0.0)",
+    "cartopy (>=0.25.0,<0.26.0)",
+    "dask (>=2025.11.0,<2026.0.0)",
+    "distributed (>=2025.11.0,<2026.0.0)"
 ]
 
 
