Optimize zarr writing with batch operations and task-based workflow
- Implemented umask-based permissions to eliminate recursive chmod
- Added batch zarr writing with consolidated metadata
- Fixed zarr v3 DirectoryStore compatibility
- Added detailed progress logging for zarr conversion
- Created task-based Level 4 workflow with draw status files
- Added run_single_task.sbatch for individual task testing
- Resource allocation updates (8 CPUs, 35G memory for Level 4)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "cftime (>=1.6.5,<2.0.0)",
     "cartopy (>=0.25.0,<0.26.0)",
     "dask (>=2025.11.0,<2026.0.0)",
-    "distributed (>=2025.11.0,<2026.0.0)"
+    "distributed (>=2025.11.0,<2026.0.0)",
+    "filelock (>=3.13.0,<4.0.0)"
 ]
 
 
